--- a/css/delivery.css
+++ b/css/delivery.css
@@ -1,4 +1,4 @@
-.fulfilment{
+.delivery{
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -7,29 +7,30 @@
     box-shadow: inset 0px 20px 20px #212121;
     border-bottom: 3px solid black;
     
-    
 }
+
+
 .section__title{
     display: flex;
     align-items: center;
     font-size: 4rem;
     gap: 10px;
-    color:yellow; ;
+    color:#ffffff; 
 }
-.Ux-amarelo{
-    color: yellow;
+.Ux-vermelho{
+    color: red;
 }
-.section__subtitle__text{
+.section__subtitle__textt{
     display: flex;
     padding-left: 30px;
     gap: 30px;
     flex-direction: column;
 }
-.subtitulo{
+.subtituloo{
     font-size: 2rem;
     color: #ffffff;
 }
-.text{
+.textt{
     display: flex;
     flex-direction: column;
     color: #ffffff;
@@ -37,27 +38,27 @@
     width: 85%;
     gap: 40px;
 }
-.image__text{
+.image__textt{
     display: flex;
     gap: 150px;
    
 
 }
-.pai{
+.paii{
     display: flex;
     flex-direction: column;
     gap: 30%;
 }
-.text_pai{
+.text_paii{
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-.image__text{
+.image__textt{
     
     padding-right: 20%;
 }
-.botao_fulfilment{
+.botao_delivery{
     
     display: flex;
     align-items: center;
@@ -66,10 +67,10 @@
     width: 300px;
     border-radius: 10px;
     height: 60px;
-    background-color: yellow;
+    background-color:red;
     color: #000000;
 }
 .image{
     width: 80%;
-    height: 100%;
+    height: 90%;
 }
