--- a/css/home.css
+++ b/css/home.css
@@ -10,6 +10,7 @@
     padding-top: 130px;
     gap: 48px;
     width: 100%;
+    box-shadow: inset 0px -40px 40px #212121;
 }
 .section-title{
     display: flex;
@@ -81,6 +82,7 @@
     width: 50%;
     font-weight: 400;
     padding-left: 120px;
+    padding-bottom: 100px;
 }
 .logo-final{
     gap: 10px;
