--- a/css/delivery.css
+++ b/css/delivery.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 90px;
     box-shadow: inset 0px 20px 20px #212121;
     border-bottom: 3px solid black;
@@ -18,7 +18,7 @@
     color:#ffffff; 
 }
 .Ux-vermelho{
-    color: red;
+    color: #c43e3e;
 }
 .section__subtitle__textt{
     display: flex;
@@ -52,7 +52,7 @@
 .text_paii{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 60px;
 }
 .image__textt{
     
@@ -67,10 +67,10 @@
     width: 300px;
     border-radius: 10px;
     height: 60px;
-    background-color:red;
+    background-color:#c43e3e;
     color: #000000;
 }
-.image{
-    width: 80%;
-    height: 90%;
+.image-delivery{
+    width: 40%;
+    height: 80%;
 }
