--- a/css/home.css
+++ b/css/home.css
@@ -7,8 +7,8 @@
     color: #ffffff;
     background-position: center;
     display: flex;
-    padding-top: 130px;
-    gap: 48px;
+    padding-top: 20px;
+    gap: 12%;
     width: 100%;
     box-shadow: inset 0px -40px 40px #212121;
 }
@@ -41,7 +41,8 @@
 .image{
     display: flex;
     align-items: center;
-    font-size: 4rem;
+    font-size: 4rem;  
+    
     justify-content: space-around;
    
     
@@ -51,6 +52,7 @@
     font-weight: 700;
     flex-direction: column;
     align-items: flex-end;
+    
 }
 .ux-azul{
     font-weight: 700;
@@ -85,7 +87,9 @@
     padding-bottom: 100px;
 }
 .logo-final{
-    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
     padding-right: 50px;
     overflow: hidden;
     position: fixed;
@@ -93,28 +97,69 @@
     z-index: 1;
     right: 16px;
     bottom: 16px;
+    top: 300px;
     
     
+    
+}
+
+.in{
+    width: 100%;
+    height: 100%;
     
 }
 .link-back{
     display: flex;
-    gap: 10px;
+    flex-direction: column;
+    gap: 80px;
 }
 .logo-amarelo{
-    width: 40px;
-    height: 40px;
-    background-color: yellow;
+    display: flex;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    background-color: #eab828;
+}
+.logo-cinza{
+    display: flex;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    background-color: rgb(107, 107, 107);
+}
+.logo-cinza:hover{
+    border: solid #000000 1px;
+    transition: 1s;
+    background-color: #ffffff;
+}
+.logo-amarelo:hover{
+    border: solid #000000 1px;
+    transition: 1s;
+    background-color: #ffffff;
 }
 .logo-azul{
-    width: 40px;
-    height: 40px;
-    background-color: blue;
+    display: flex;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    background-color:#407bff;
+}
+.logo-azul:hover{
+    border: solid #000000 1px;
+    transition: 1s;
+    background-color: #ffffff;
 }
 .logo-vermelho{
-    width: 40px;
-    height: 40px;
-    background-color: red;
+    display: flex;
+    border-radius: 100%;
+    width: 25px;
+    height: 25px;
+    background-color: #c43e3e;
+}
+.logo-vermelho:hover{
+    border: solid #000000 1px;
+    transition: 0.9s;
+    background-color: #ffffff;
 }
 .titulo{
     color: white;
