--- a/css/solutions.css
+++ b/css/solutions.css
@@ -4,12 +4,12 @@
     display: flex;
     flex-direction: column;
     gap: 50px;
-    padding-top: 8%;
+    padding-top: 5%;
     padding-left: 90px;
     border-bottom: 3px solid black;
 }
 .Ux-azul{
-    color: #0000ff;
+    color: #407bff;
 }
 
 .section_title{
@@ -43,12 +43,12 @@
 .pai{
     display: flex;
     flex-direction: column;
-    gap: 30%;
+    gap: 60px;
 }
 .text_pai{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 60px;
 }
 .text__image{
     
@@ -62,6 +62,6 @@
     width: 300px;
     border-radius: 10px;
     height: 60px;
-    background-color: #0000ff;
-    color: #ffffff;
+    background-color: #407bff;
+    color: #000000;
 }
