--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,27 @@ body{
     
 
 }
+::-webkit-scrollbar {
+    width:10px;
+    height: 10px;
+    }
+     
+    /* aqui é para personalizar o fundo da barra, neste caso estou colocando um fundo cinza escuro*/
+    ::-webkit-scrollbar-track {
+    background:#212121;
+    }
+     
+    /* aqui é a alça da barra, que demonstra a altura que você está na página
+    estou colocando uma cor azul clara nela*/
+    ::-webkit-scrollbar-thumb {
+    background: #212121;
+    }
 header{
-    overflow: hidden;
-    position: fixed;
+    
+        
     grid-area: content;
     z-index: 1;
-    margin-top: 10px;
-    max-width: 1200px;
+    max-width: 100%;
     width: 100%;
     background-color: #000000;
     color: #ffffff;
@@ -56,4 +70,9 @@ section{
 .delivery{
     width: 100%;
     background-color: #212121;
+}
+.contato{
+    width: 100%;
+    background-color: #212121;
+    
 }
