--- a/css/home.css
+++ b/css/home.css
@@ -38,7 +38,7 @@
     height: 5px;
     background-color: #ffffff;
 }
-.image{
+.images{
     display: flex;
     align-items: center;
     font-size: 4rem;  
