--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -1,4 +1,4 @@
-@media(max-width:960px){
+@media(max-width:961px){
 
     :root{
         --space-default: 30px;
@@ -134,18 +134,21 @@ main{
 
 }
 
-@media(max-width:640px){
+@media(max-width:940px){
 
     .home{
-        height: 200vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        height: 80vh;
         gap: 80px;
     }
     .images{
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-        padding-left: 180px;
+        justify-content: center;
+        align-items: center;
         gap: 150px;
         font-size: 4.5rem;
     }
@@ -158,30 +161,40 @@ main{
     }
 
     .fulfilment{
-        height: 140vh;
+        height: 70vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0px;
     }
     .title{
-        font-size: 4rem;
+        font-size: 3rem;
     }
     .text{
+        display: flex;
+        
         width: 100%;
     }
 
     .solutions{
-        height: 140vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 80vh;
+        padding: 0;
     }
     .pai_{
         display: flex;
         flex-direction: column;
     }
     .title_solutions{
-        font-size: 4rem;
+        font-size: 3rem;
     }
     .subtitulo{
         font-size: 1.5rem;
     }
     .delivery{
-        height: 140vh;
+        height: 70vh;
     }
     .contato{
         height: 140vh;
