--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -134,15 +134,22 @@ main{
 
 }
 
-@media(max-width:940px){
+@media(max-width:960px){
 
     .home{
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 0;
-        height: 80vh;
+        height: 130vh;
         gap: 80px;
+    }
+    .titulo{
+        display: flex;
+        padding-left: 150px;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.9rem;
     }
     .images{
         display: flex;
@@ -150,24 +157,34 @@ main{
         justify-content: center;
         align-items: center;
         gap: 150px;
-        font-size: 4.5rem;
+        font-size: 3rem;
     }
     .texts{
         display: flex;
-        align-items: center;
-        width: 90%;
-        justify-content: center;
-        font-size: 1.8rem;
+        align-items: flex-start;
+        width: 80%;
+        justify-content: flex-start;
+        font-size: 1rem;
     }
 
     .fulfilment{
-        height: 70vh;
+        height: 170vh;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         padding: 0px;
     }
+    .papai{
+        display: flex;
+        flex-direction: column;
+        
+        justify-content: center;
+        padding-left: 100px;
+    }
     .title{
+        display: flex;
+        align-items: flex-start;
+        padding: 0;
         font-size: 3rem;
     }
     .text{
