--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -1,148 +1,8 @@
-@media(max-width:961px){
 
-    :root{
-        --space-default: 30px;
-    }
-   
-main{
-    grid-template-columns: 1fr;
-}
-.section-title{
-    display: flex;
-    justify-content: start;
-    padding-left: 100px;
-    
-}
-.titulo{
-    display: flex;
-    justify-content: start;
-    font-size: 4rem;
-    
-}
-.logo-final{
-    
-    right: 1px;
-}
+@media(max-width:640px){
 
-.home{
-    display: flex;
-    justify-content: start;
-    height: 70vh;
-    background-image: url(./img/phil-desforges-ow1mML1sOi0-unsplash\ 1.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    align-items: flex-start;
-    
-}
-.titulo{
-    font-size: 2rem;
-}
-.linha{
-    display: none;
-}
-.images{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-left: 100px;
-    gap: 250px;
-    font-size: 2.5rem;
-}
-.texts{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70%;
-    font-weight: 300;
-}
-
-.fulfilment{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 70vh;
-}
-.text{
-    display: flex;
-    width:70%;
-}
-.text_pai{
-    display: flex;
-    
-    
-    
-}
-.image__text{
-    display: flex;
-    flex-direction: column;
-    gap: 0px;
-}
-.image_logic{
-    width: 50%;
-    height: 100%;
-}
-
-.solutions{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    height: 70vh;
-}
-.text__image{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-.image{
-    width: 40%;
-    height: 50%;
-    padding-left: 0;
-}
-
-.delivery{
-    height: 70vh;
-}
-.image__textt{
-    display: flex;
-    flex-direction: column;
-}
-.image-delivery{
-    height: 90%;
-    width: 50%;
-}
-
-.contato{
-    display: flex;
-    justify-content: center;
-    height: 70vh;
-}
-.icons_somosux{
-    display: flex;
-    justify-content: start;
-    align-items: flex-start;
-    flex-direction: column;
-    gap: 100px;
-}
-.classp{
-    display: flex;
-    justify-content: center;
-    gap: 50px;
-    padding: 0;
-}
-
-
-
-}
-
-@media(max-width:960px){
-
-    .home{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0;
-        height: 140vh;
-        gap: 80px;
-    }
+   section{
+       height: 120vh;
+   }
     
 }
