--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -4,5 +4,12 @@
    section{
        height: 120vh;
    }
+   .home{
+       display: flex;
+       flex-direction: column;
+   }
+   .linha{
+       display: none;
+   }
     
 }
