--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -1,15 +1,76 @@
 
 @media(max-width:640px){
 
+    
    section{
-       height: 120vh;
+       height: 30vh;
    }
+
+   header{
+       display: flex;
+       justify-content: flex-start;
+       align-items: center;
+       font-size: 1rem;
+   }
+   .logo{
+       font-size: 1.5rem;
+   }
+   .amarelo{
+       width: 22px;
+       height: 22px;
+   }
+   .azul{
+    width: 22px;
+    height: 22px;
+   }
+   .vermelho{
+    width: 22px;
+    height: 22px;   
+   }
+
+
+   
    .home{
        display: flex;
-       flex-direction: column;
+       justify-content: start;
+       align-items: flex-start;
+       font-size: 1rem;
+       gap: 7%;
+       
    }
    .linha{
        display: none;
    }
+   .section-title{
+       display: flex;
+       padding-left: 10px;
+       align-items: flex-start;
+       justify-content: flex-start;
+   }
+   .titulo{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1rem;
+   }
+   .images{
+       display: flex;       
+       padding-left: 20px;
+       font-size: 1.4rem;
+       gap: 55px;      
+   }
+   .logo3anos{
+       width: 100px;
+   }
+   .texts{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       width: 25%;
+       padding-left: 10px;
+       font-size: 10px;
+   }
+   
+
     
 }
