--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -15,6 +15,9 @@
    .logo{
        font-size: 1.5rem;
    }
+   .logo-final{
+       display: none;
+   }
    .amarelo{
        width: 22px;
        height: 22px;
@@ -51,7 +54,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 5rem;
+        font-size: 1rem;
    }
    .images{
        display: flex;       
