--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -3,7 +3,7 @@
 
     
    section{
-       height: 30vh;
+       height: 40vh;
    }
 
    header{
@@ -72,6 +72,67 @@
        width: 25%;
        padding-left: 10px;
        font-size: 10px;
+   }
+
+
+   .fulfilment{
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    padding: 0;
+    font-size: 1rem;
+    gap: 7%;
+    height: 55vh;
+   }
+   .section__title{
+        display: flex;
+        padding-left: 10px;
+        font-size: 20px; 
+        align-items: center;
+        justify-content: flex-start;
+   }
+   .title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+   }
+   .section__subtitle__text{
+       display: flex;
+       padding-left: 10px;
+   }
+   .subtitulo{
+       display: flex;
+       padding-left: 0;
+       font-size: 0.8rem;
+   }
+   .image__text{
+       display: flex;
+       flex-direction: column;
+       gap: 0px;
+   }
+   .pai{
+       display: flex;
+     gap: 10px;
+   }
+   .text_pai{
+       display: flex;
+       gap: 10px;
+   }
+   .text{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       font-size: 0.8rem;
+       width: 30%;
+   }
+   .botao_fulfilment{
+       font-size: 0.5rem;
+       width: 150px;
+       height: 20px;
+   }
+   .image_logic{
+       width: 20%;
    }
    
 
