--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -3,7 +3,7 @@
 
     
    section{
-       height: 40vh;
+       height: 99vh;
    }
 
    header{
@@ -38,7 +38,7 @@
        justify-content: start;
        align-items: flex-start;
        font-size: 1rem;
-       gap: 7%;
+       gap: 15%;
        
    }
    .linha{
@@ -46,32 +46,32 @@
    }
    .section-title{
        display: flex;
-       padding-left: 10px;
-       align-items: flex-start;
+       padding-left: 9.9vh;
+       align-items: center;
        justify-content: flex-start;
    }
    .titulo{
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 1rem;
+        font-size: 1.7rem;
    }
    .images{
        display: flex;       
-       padding-left: 20px;
-       font-size: 1.4rem;
-       gap: 55px;      
+       padding-left: 13vh;
+       font-size: 1.9rem;
+       gap: 85px;      
    }
    .logo3anos{
-       width: 100px;
+       width: 190px;
    }
    .texts{
        display: flex;
        align-items: center;
        justify-content: center;
-       width: 25%;
-       padding-left: 10px;
-       font-size: 10px;
+       width: 45%;
+       padding-left: 10vh;
+       font-size: 1.4rem;
    }
 
 
