--- a/css/home.css
+++ b/css/home.css
@@ -86,6 +86,10 @@
     padding-left: 120px;
     padding-bottom: 100px;
 }
+.text_home{
+    display: flex;
+    font-size: 1.5rem;
+}
 .logo-final{
     display: flex;
     flex-direction: column;
