--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -46,9 +46,8 @@
    }
    .section-title{
        display: flex;
-       padding-left: 9.9vh;
        align-items: center;
-       justify-content: flex-start;
+       justify-content: center;
    }
    .titulo{
         display: flex;
@@ -57,10 +56,12 @@
         font-size: 1.7rem;
    }
    .images{
-       display: flex;       
-       padding-left: 13vh;
+       display: flex;    
+       width: 100%;  
+       align-items: center; 
+       justify-content: space-around;
        font-size: 1.9rem;
-       gap: 85px;      
+           
    }
    .logo3anos{
        width: 190px;
@@ -69,14 +70,24 @@
        display: flex;
        align-items: center;
        justify-content: center;
-       width: 45%;
-       padding-left: 10vh;
-       font-size: 1.4rem;
+       width: 100%;
+       padding-left: 0;
+       gap: 0px;
+       
+      
+   }
+   .text_home{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 1.3rem;
+        padding: 12px;
    }
 
 
    .fulfilment{
-    display: flex;
+    display: none;
     justify-content: start;
     align-items: flex-start;
     padding: 0;
@@ -84,55 +95,16 @@
     gap: 7%;
     height: 55vh;
    }
-   .section__title{
-        display: flex;
-        padding-left: 10px;
-        font-size: 20px; 
-        align-items: center;
-        justify-content: flex-start;
+   
+   
+   .solutions{
+       display: none;
    }
-   .title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+   .delivery{
+       display: none;
    }
-   .section__subtitle__text{
-       display: flex;
-       padding-left: 10px;
-   }
-   .subtitulo{
-       display: flex;
-       padding-left: 0;
-       font-size: 0.8rem;
-   }
-   .image__text{
-       display: flex;
-       flex-direction: column;
-       gap: 0px;
-   }
-   .pai{
-       display: flex;
-     gap: 10px;
-   }
-   .text_pai{
-       display: flex;
-       gap: 10px;
-   }
-   .text{
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       font-size: 0.8rem;
-       width: 30%;
-   }
-   .botao_fulfilment{
-       font-size: 0.5rem;
-       width: 150px;
-       height: 20px;
-   }
-   .image_logic{
-       width: 20%;
+   .contato{
+       display: none;
    }
    
 
