--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -10,10 +10,10 @@
        display: flex;
        justify-content: flex-start;
        align-items: center;
-       font-size: 1rem;
+       font-size: 60px;
    }
    .logo{
-       font-size: 1.5rem;
+       font-size: 1.2rem;
    }
    .logo-final{
        display: none;
