--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -48,6 +48,8 @@
        display: flex;
        align-items: center;
        justify-content: center;
+      
+      
    }
    .titulo{
         display: flex;
@@ -72,7 +74,8 @@
        justify-content: center;
        width: 100%;
        padding-left: 0;
-       gap: 0px;
+       padding: 10px;
+       gap: ;
        
       
    }
@@ -81,7 +84,7 @@
         align-items: center;
         justify-content: center;
         text-align: center;
-        font-size: 1rem;
+        font-size: 1.1rem;
         padding: 12px;
    }
 
