--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -75,7 +75,7 @@
        width: 100%;
        padding-left: 0;
        padding: 10px;
-       gap: ;
+       
        
       
    }
@@ -90,16 +90,96 @@
 
 
    .fulfilment{
-    display: none;
-    justify-content: start;
-    align-items: flex-start;
+    display: flex;
+    justify-content:center;
+    align-items: center;
     padding: 0;
+    padding-left: 0;
     font-size: 1rem;
     gap: 7%;
-    height: 55vh;
+    height: 99vh;
    }
-   
-   
+   .section__title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    width: 100%;
+    gap: 10px;
+    
+    color: white;
+    }
+    .Ux-amarelo{
+        color:#eab828 ;
+    }
+    .section__subtitle__text{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+        flex-direction: column;
+        padding-left: 0;
+    }
+    .subtitulo{
+        font-size: 1.2rem;
+        color: #ffffff;
+    }
+    .pai_{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        gap: 0px;
+    }
+    .text__image{
+        width: 100%;
+    }
+    .image__text{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0;
+        width: 100%;
+        gap: 10px;
+    }
+    .text_pai{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        color: #ffffff;
+        font-size: 1rem;
+        text-align: center;
+        gap: 50px;
+    }
+    .text{
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        font-size: 1.1rem;
+        width: 90%;
+        
+    }
+    .botao_fulfilment{
+    
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 600;
+        width: 250px;
+        border-radius: 10px;
+        height: 30px;
+        background-color: #eab828;
+        color: #000000;
+        font-size: 0.9rem;
+    }
+    .image_logic{
+    display: flex;
+    width: 60%;
+    height: 100%;
+    }
    .solutions{
        display: none;
    }
