--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -121,7 +121,8 @@
         padding-left: 0;
     }
     .subtitulo{
-        font-size: 1.2rem;
+        font-size: 1.1rem;
+        font-weight: 800;
         color: #ffffff;
     }
     .pai_{
