--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -55,7 +55,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
    }
    .images{
        display: flex;    
@@ -121,6 +121,7 @@
         padding-left: 0;
     }
     .subtitulo{
+        padding: 10px;
         font-size: 1.1rem;
         font-weight: 800;
         color: #ffffff;
