--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -182,9 +182,78 @@
     width: 60%;
     height: 100%;
     }
+    
+
+
    .solutions{
-       display: none;
-   }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding-top: 0;
+        padding-left: 0px;
+        border-bottom: 3px solid black;
+    }
+    .section_title{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        gap: 10px;
+        color: #ffffff;
+        padding-left: 0px;
+    }
+    .text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: #ffffff;
+        font-size: 1rem;
+        width: 100%;
+        gap: 40px;
+    }
+    .pai_{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 60px;
+    }
+    .text_pai{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;    
+        gap: 40px;
+    }
+    .text__image{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 10px;
+        
+    }
+    .botao_solutions{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-weight: 500;
+        width: 250px;
+        border-radius: 10px;
+        height: 30px;
+        background-color: #407bff;
+        color: #000000;
+        font-size: 0.9rem;
+    }
+
+   .image{
+        display: flex;
+        width: 60%;
+        height: 100%;
+    }
+
+
    .delivery{
        display: none;
    }
