--- a/css/responsividade.css
+++ b/css/responsividade.css
@@ -215,6 +215,7 @@
     }
     .pai_{
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 60px;
