--- a/css/home.css
+++ b/css/home.css
@@ -25,10 +25,24 @@
     background-clip: text;
     -webkit-background-clip:text ;
     color:transparent;
+    animation-duration: 1s;
 }
-.animate__animate__slideInLeft{
+.logo3anos{
     
-    color: #ffffff;
+    animation-duration: 1.3s;
+}
+
+
+@keyframes animar{
+    from{
+        
+        transform:translateX(-100%)
+
+    }
+    to{
+        
+        transform:translateX(1%);
+    }
 }
 
 .linha{
@@ -48,6 +62,8 @@
     
 }
 .somos_ux{
+    
+    animation-duration: 1s;
     display: flex;
     font-weight: 700;
     flex-direction: column;
@@ -55,6 +71,7 @@
     
 }
 .ux-azul{
+    
     font-weight: 700;
     background:linear-gradient( #ffffff,var(--secundary-color));
     background-clip: text;
@@ -85,7 +102,10 @@
     font-weight: 400;
     padding-left: 120px;
     padding-bottom: 100px;
+    animation-name: animar;
+    animation-duration: 3.1s;
 }
+
 .text_home{
     display: flex;
     font-size: 1.5rem;
